# rust-mc

./: .pre-commit-config.yaml  Cargo.toml  README.md  rustfmt.toml  server.toml
encde/: Cargo.toml
encde/derive/: Cargo.toml
encde/derive/src/: attrs.rs  decode.rs  encode.rs  lib.rs  tracker.rs
encde/derive/src/decode/: common.rs  enum_impl.rs  struct_impl.rs
encde/derive/src/encode/: common.rs  enum_impl.rs  struct_impl.rs
encde/derive_test/: Cargo.toml
encde/derive_test/src/: lib.rs
encde/src/: lib.rs  trivial.rs  util.rs
src/: main.rs  server.rs
src/client/: login.rs  mod.rs  play.rs  status.rs
src/config/: mod.rs
src/logging/: mod.rs
src/packets/: helpers.rs  mod.rs  varint.rs
src/packets/cipher/: mod.rs
src/packets/handshake/: mod.rs  receive.rs
src/packets/helpers/: chat.rs  misc.rs  mod.rs  position.rs  rotation.rs  time.rs
src/packets/helpers/game/: biome.rs  bossbar.rs  chat.rs  chunk.rs  dimension.rs  entity.rs  map.rs  mod.rs  player_list.rs  recipes.rs  scoreboard.rs  slot.rs
src/packets/helpers/wrappers/: bitvec.rs  json.rs  mod.rs  nbt.rs  std.rs  util.rs  uuid.rs
src/packets/login/: mod.rs  receive.rs  send.rs
src/packets/play/: mod.rs  receive.rs  send.rs
src/packets/status/: mod.rs  receive.rs  send.rs
src/server/: login.rs  mod.rs  play.rs  status.rs
src/world/: mod.rs  util.rs  world.rs
src/world/generator/: mod.rs  void.rs
src/world/storage/: mod.rs  naive.rs
