[package]
name = "rust-mc"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.7.5"
anyhow = "1.0.53"
base64 = "0.13.0"
bitvec = "1.0.0"
cfb8 = "0.7.1"
cipher = { version = "0.3.0", features = ["std"] }
encde = { path = "encde", features = ["derive", "big_endian"] }
figment = { version = "0.10.6", features = ["toml", "env"] }
hematite-nbt = { git = "https://github.com/mattfbacon/hematite_nbt" }
log = "0.4.14"
log4rs = "1.0.0"
magnetic = "2.2.0"
rand = "0.8.4"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
rsa = "0.5.0"
serde = "1.0.136"
serde_json = "1.0.78"
sha = "1.0.3"
uuid = { version = "0.8.2", features = ["serde", "v1"] }
